@@ -3,6 +3,9 @@
   necessary
 - oops vipsthumbnail sharpening was turning off for integer shrinks, 
   thanks Nicolas
+- im_vips2jpeg() could fail for very small images (thanks Tim)
+- threadpool wasn't stopping on allocate errors (thanks Tim)
+- vips_sink_disc() could block if allocate failed (thanks Tim)
 
 12/5/10 started 7.22.1
 - fix a problem with tiff pyramid write and >1cpu, thanks Ruven
